syntax = "proto3";

package user.v1;

option go_package = "github.com/crazyfrankie/goim/protocol/user/v1;userv1";

import "idl/common/v1/common.proto";

message User {
  int64 user_id = 1 [json_name = "user_id_str"];
  string name = 2;
  string email = 3;
  string user_unique_name = 4;
  string avatar_url = 5;
  string description = 6;
}

message RegisterRequest {
  string email = 1;
  string password = 2;
  string name = 3;
}

message RegisterResponse {
  string access_token = 1;
  string refresh_token = 2;

  common.v1.Error error  = 3;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  string access_token = 1;
  string refresh_token = 2;

  common.v1.Error error = 3;
}

message GetUserInfoRequest {
  int64 user_id = 1;
}

message GetUserInfoResponse {
  User data = 1;

  common.v1.Error error = 2;
}

message MGetUserInfoRequest {
  repeated int64 user_ids = 1;
}

message MGetUserInfoResponse {
  repeated User data = 1;

  common.v1.Error error = 3;
}

service UserService {
  rpc Register(RegisterRequest) returns (RegisterResponse);
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc GetUserInfo(GetUserInfoRequest) returns (GetUserInfoResponse);
  rpc MGetUserInfo(MGetUserInfoRequest) returns (MGetUserInfoResponse);
}